Fixed missing color var()

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --proj-blue: #1F78E4;
     --proj-backg: #00030C;
     --proj-bhover: #003b83;
+    --proj-lblue: #5271fc;
     --proj-font: 'Inter';
 }
 
